--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       height:350px;
       margin:10px;
      transition:all 3s;
-    box-shado: 6px 6px 6px #645388;
+    box-shadow: 6px 6px 6px #645388;
     }
  img:hover{
             transform: rotate(360deg)
